@@ -1754,6 +1754,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
 
         return -1;
       }
+
+      if (hc_path_has_bom (user_options_extra->hc_hash) == true)
+      {
+        event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", user_options_extra->hc_hash);
+
+        return -1;
+      }
     }
   }
 
@@ -1797,6 +1804,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
 
         return -1;
       }
+
+      if (hc_path_has_bom (rp_file) == true)
+      {
+        event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", rp_file);
+
+        return -1;
+      }
     }
   }
   else if (user_options->attack_mode == ATTACK_MODE_COMBI)
@@ -1829,6 +1843,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
         return -1;
       }
 
+      if (hc_path_has_bom (dictfile1) == true)
+      {
+        event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", dictfile1);
+
+        return -1;
+      }
+
       if (hc_path_exist (dictfile2) == false)
       {
         event_log_error (hashcat_ctx, "%s: %s", dictfile2, strerror (errno));
@@ -1846,6 +1867,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
       if (hc_path_read (dictfile2) == false)
       {
         event_log_error (hashcat_ctx, "%s: %s", dictfile2, strerror (errno));
+
+        return -1;
+      }
+
+      if (hc_path_has_bom (dictfile2) == true)
+      {
+        event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", dictfile2);
 
         return -1;
       }
@@ -1871,6 +1899,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
         if (hc_path_read (maskfile) == false)
         {
           event_log_error (hashcat_ctx, "%s: %s", maskfile, strerror (errno));
+
+          return -1;
+        }
+
+        if (hc_path_has_bom (maskfile) == true)
+        {
+          event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", maskfile);
 
           return -1;
         }
@@ -1911,6 +1946,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
 
           return -1;
         }
+
+        if (hc_path_has_bom (maskfile) == true)
+        {
+          event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", maskfile);
+
+          return -1;
+        }
       }
     }
   }
@@ -1945,6 +1987,13 @@ int user_options_check_files (hashcat_ctx_t *hashcat_ctx)
         if (hc_path_read (maskfile) == false)
         {
           event_log_error (hashcat_ctx, "%s: %s", maskfile, strerror (errno));
+
+          return -1;
+        }
+
+        if (hc_path_has_bom (maskfile) == true)
+        {
+          event_log_error (hashcat_ctx, "%s: Byte Order Mark (BOM) was detected", maskfile);
 
           return -1;
         }
